--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -11,5 +11,7 @@
   <!--new code here-->
   <button class="btn btn-success ms-2" type="submit">Log In</button>
 </form>
- 
+ <!--new code here-->
+ <p><a href="{% url 'password_reset' %}">Forgot your password?</a></p>
+ <!--end new code-->
 {% endblock content %}
