--- a/templates/home.html
+++ b/templates/home.html
@@ -11,6 +11,9 @@ Hi {{ user.username }}! you are {{ user.age }} years old.
   {% csrf_token %}
   <button type="submit">Log Out</button>
 </form>
+<br/>
+<p><a class="btn btn-primary" href="{% url 'article_list' %}" role="button">
+  View all articles</a></p> <!-- new -->
 {% else %}
 <p>You are not logged in</p>
 <a href="{% url 'login' %}">Log In</a> |
