--- a/templates/article_list.html
+++ b/templates/article_list.html
@@ -18,8 +18,10 @@
   </div>
   <div class="card-footer text-center text-muted">
     # new link here 
+    {% if article.author.pk == request.user.pk %} 
     <a href="{% url 'article_edit' article.pk %}">Edit</a>
     <a href="{% url 'article_delete' article.pk %}">Delete</a>
+    {% endif %}
   </div>
 </div>
 <br />
